"Python code to Transfer data from various sources e.g. Tables, CSV, JSON to MYSQL DB in Docker"

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 version: "3.7"
-
+# Docker compos file to get all work back in a moment just in case of crash.
 services:
   database:
     image: mysql:8.0
